# critical-power

./: README.md  pyproject.toml
src/critical_power/: __init__.py
tests/: test_fit_intervals_icu.py
tests/data/: intervals_icu_power_curves.csv
