[build-system]
requires = [
  "setuptools>=61.0.0",
  "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "critical-power"
dynamic = ["version"]
description = "A program for calculating critical power from a power curve."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-only" }
keywords = ["cycling", "critical power"]
authors = [
  {name = "Hampus Näsström", email = "hampus.nasstrom@gmail.com"},
]
maintainers = [
  {name = "Hampus Näsström", email = "hampus.nasstrom@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

dependencies = [
    "scipy>=1.12.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[project.scripts]
metainfo-yaml2py = "critical-power:main"

[project.urls]
"Homepage" = "https://github.com/hampusnasstrom/critical-power"
"Bug Tracker" = "https://github.com/hampusnasstrom/critical-power/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]